== 0.5.1

* Refactoring
  * Unused CV variable has been removed, (previously replaced by curriculum_vitae)

== 0.5.0

* Enhancements
  * Applicant updates
    * Multiple degrees can be added to applicants
      * Degree Type, Institution, Year, Advisor, Thesis, and Concentration / Major
    * Previous Institutions has been merged with Degrees Earned
    * Citizenship status is simplified
    * Research Interests are now required
  * Administrator updates
    * Notify applicants and trainees to fill out annual information
    * Modify submission date on applicant page
    * View different time ranges for reports on dashboard
    * Export selected applicants information to a CSV file
    * Export annual information to CSV
    * Notify enrolled trainees to complete exit interviews
  * Preceptor updates
    * Preferred preceptors are notified by email applicants submit their applications

== 0.4.2

* Enhancements
  * Updated to Rails 3.2.8
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * About page reformatted to include links to github and contact information

* Refactoring
  * Consistent sorting and display of model counts used across all objects, (applicants, preceptors, users)

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

* Bug Fix
  * Applicant sign up page now displays correctly

== 0.4.1

* Bug Fix
  * Failure to send emails in production no longer generate error messages

== 0.4.0

* Enhancements
  * Applicant updates
    * Degrees Earned now combines Degree, Institution, and Year of Graduation
      * Previous Institutions will be removed
    * Citizenship Status added with required alien registration number for permanent residents
    * Degree types can be specified using checkboxes